@@ -1,12 +1,7 @@
 package ru.job4j.stream;
 
 import org.junit.Test;
-
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.*;
 
@@ -18,7 +13,7 @@ public class MatrixToListTest {
                 {4, 5, 6},
                 {7, 8, 9}
         };
-        List<Integer> expected = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9
         );
         assertThat(MatrixToList.convert(testMatrix), is(expected));
